[package]
name = "blockbuster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
rand = "0.8.5"
ruscii = "0.3.2"
termion = "2.0.1"
tui = { version = "0.19.0", features = ["termion"] }
